[package]
name = "atom-profile"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", optional = true }
mongodb = { version = "3.2", optional = true }
futures = { version = "0.3", optional = true }
serde_json = "1"
serde_default = "0.2"
serde-inline-default = "0.2"
async-trait = { version = "0.1", optional = true }
dyn-clone = { version = "1.0", optional = true }
reqwest = { version = "0.12", features = [ "json" ], optional = true }
# simplerecords = "0.1"

atom-services = { path = "../atom-services", default-features = false }


[dependencies.tokio]
version = "1"
features = [
    "macros",
    "rt-multi-thread"
]

[dependencies.serde]
version = "1"
features = [
    "derive"
]

[features]
default = [ ]
core = [ "dep:mongodb", "dep:futures", "dep:axum", "dep:async-trait", "dep:dyn-clone" ]
services-core = [ "atom-services/core" ]
services-request = [ "dep:reqwest" ]
